# Fronter

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODEOWNERS  Copy_Files.bat  Copy_Files.sh  Copy_Files_release.bat  Copy_Files_release.sh  Copy_Files_standalone_test.bat  Copy_Files_standalone_test.sh  Fronter.sln  Fronter.sln.DotSettings  Fronter.vcxproj  Fronter.vcxproj.filters  README.md  build_linux.sh  log.txt  vcpkg-configuration.json  vcpkg.json
.NO_AI/: README.md
.github/actions/build_frontend/: action.yml  entrypoint.sh
.github/workflows/: build.yml  clang-format-check.yml  codeql-analysis.yml
Fronter/: CMakeLists.txt  Fronter.cbp  Fronter.depend  Fronter.layout  build.sh
Fronter/Configuration/: fronter-configuration.txt  fronter-example-configuration.txt  fronter-example-options.txt  fronter-options.txt
Fronter/Resources/: GeneralFAQ-READ.ME.FIRST.txt  converter_l_english.yml  converter_l_french.yml  converter_l_german.yml  converter_l_italian.yml  converter_l_latin.yml  converter_l_russian.yml  converter_l_simp_chinese.yml  converter_languages.yml
Fronter/Source/: Frontend.cpp  Frontend.h
Fronter/Source/Configuration/: Configuration.cpp  Configuration.h  FronterMod.cpp  FronterMod.h  Mod.cpp  Mod.h  RequiredFile.cpp  RequiredFile.h  RequiredFolder.cpp  RequiredFolder.h
Fronter/Source/Configuration/Options/: CheckBoxOption.cpp  CheckBoxOption.h  CheckBoxSelector.cpp  CheckBoxSelector.h  Option.cpp  Option.h  RadioOption.cpp  RadioOption.h  RadioSelector.cpp  RadioSelector.h  TextSelector.cpp  TextSelector.h
Fronter/Source/ConfigurationParser/: Configuration.cpp  Configuration.h  RequiredFile.cpp  RequiredFile.h  RequiredFolder.cpp  RequiredFolder.h
Fronter/Source/ConfigurationParser/Options/: Option.cpp  Option.h  RadioOption.cpp  RadioOption.h  RadioSelector.cpp  RadioSelector.h  TextSelector.cpp  TextSelector.h
Fronter/Source/ConverterLauncher/: ConverterLauncher.cpp  ConverterLauncher.h
Fronter/Source/Frames/: LogWindow.cpp  LogWindow.h  MainFrame.cpp  MainFrame.h
Fronter/Source/Frames/Tabs/: ConvertTab.cpp  ConvertTab.h  ModsTab.cpp  ModsTab.h  OptionBox.cpp  OptionBox.h  OptionsTab.cpp  OptionsTab.h  PathsTab.cpp  PathsTab.h
Fronter/Source/LogWatcher/: LogMessageEvent.h  LogWatcher.cpp  LogWatcher.h
Fronter/Source/UpdateChecker/: UpdateChecker.cpp  UpdateChecker.h  VersionParser.cpp  VersionParser.h
Fronter/Source/Utils/: CommonFunctions.cpp  CommonFunctions.h  LinuxFunctions.cpp  OSFunctions.h  SliceMessage.cpp  SliceMessage.h  WinFunctions.cpp
Fronter/Source/Utils/Localization/: Localization.cpp  Localization.h
Fronter/Source/WorkerThreads/ConverterLauncher/: ConverterLauncher.h  LinuxConverterLauncher.cpp  WinConverterLauncher.cpp
Fronter/Source/WorkerThreads/LogWatcher/: LogMessageEvent.h  LogWatcher.cpp  LogWatcher.h
Fronter/Source/WorkerThreads/ModCopier/: ModCopier.cpp  ModCopier.h
FronterCore/: Fronter.cpp  Fronter.h  MainFrame.cpp  MainFrame.h
wx/3.1.3/include/msvc/wx/: setup.h
